--- a/Style.css
+++ b/Style.css
@@ -10,9 +10,12 @@ a:hover{
     color: aqua;
 }
 body{
+    border: 1px aqua solid;
     width: 70%;
+    margin-top: 1px;
     font-family: 'Josefin sans';
     margin-left: auto;
+    margin-right: auto;
 }
 .ul-indice{
     /* border: 5px solid black; */
